# fetchira

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  fetchira.toml.example  install.sh  release-plz.toml
.github/workflows/: release-plz.yml  release.yml
docs/: releasing.md
skills/fetchira/: SKILL.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs  router.rs  ui.rs  update.rs  usage.rs  web.rs
src/mcp/: mod.rs
src/providers/: exa.rs  firecrawl.rs  gemini_web.rs  grok_statsig.rs  grok_web.rs  jina.rs  mod.rs  parallel.rs  perplexity_web.rs  serper.rs  steel.rs  tavily.rs
tests/: router_self_check.rs
webui/: SKILL.md  _ds_bundle.js  readme.md  styles.css
webui/tokens/: base.css  colors.css  effects.css  fonts.css  spacing.css  typography.css
webui/ui_kits/dashboard/: AccountsTab.jsx  ActivityTab.jsx  AddAccountModal.jsx  OverviewTab.jsx  TopBar.jsx  data.js  index.html
